[package]
name = "rust"
version = "0.1.0"
authors = ["Aritra <aritra_ghosh@mckinsey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.3.12"
futures = { version = "0.3.*" }
tokio = {version = "0.2.*", features = ["full"] }
reqwest = "0.10.7"
